--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.38",
+        "prettier": "3.3.3",
         "tailwindcss": "^3.4.3",
         "vite": "^5.0"
     },
