--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.38",
-        "prettier": "3.3.3",
+        "prettier": "^3.3.3",
+        "prettier-plugin-blade": "^2.1.16",
+        "prettier-plugin-tailwindcss": "^0.6.5",
         "tailwindcss": "^3.4.3",
         "vite": "^5.0"
     },
